# reversa

./: .gitattributes  .gitignore  CLAUDE.md  GOAL.md  Makefile  README.md  main.py  pyproject.toml
.claude/hooks/: block-env.sh
.claude/rules/: coding-style.md  security.md  testing.md
data/api/: ids.txt
docs/: architecture.md  estructura_leyes-v1.md  estructura_leyes-v2.md  estructura_leyes.md
ontology/kinetic-layer/api_boe/errors/: .md
ontology/kinetic-layer/preprocess/errors/: .md
ontology/semantic-layer/agents/edges/: deroga_con_excepcion.json  modifica.json  result_edge.json
ontology/semantic-layer/agents/nodes/: norma.json  user_query.json
ontology/semantic-layer/humans/edges/: aprueba.md  añade.md  cita.md  deroga.md  deroga_con_excepcion.md  deroga_en_cuanto_se_oponga.md  (+15 more)
plans/: 1-vision-v1.md  1-vision-v2.md  1-vision.md  schemas.md  vision-v1.md  vision-v2.md  vision-v3.md  vision-v4.md
resources/: briefings_solution.md
src/: api.py  chat.py  claude.py  cli.py  config.py  llm.py  main.py  preprocess.py  schemas.py
src/api/: __init__.py  downloader.py
src/llm/: chat.py  claude.py
src/web/: __init__.py  app.py
src/web/components/: __init__.py  filter_panel.py  info_panel.py  sigma_canvas.py
src/web/pages/: __init__.py  chat.py  graph.py
src/web/static/: sigma_bridge.js
tests/: __init__.py  conftest.py  test_api.py  test_llm.py  test_preprocess.py
tests/fixtures/xml/: BOE-A-1992-26318.xml  BOE-A-2015-10565.xml
tests/integration/api/: __init__.py  test_downloader_real.py
tests/unit/api/: __init__.py  test_downloader.py
(+3 files in other folders)
